--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <p>Test Commit</p>
+  <p>2nd Commit on Live Hosting via Github</p>
   Join our community
 
   30-day, hassle-free money back guarantee
